--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-openai-whisper
-customtkinter
-pyaudio
-keyboard
-pyperclip
-torch
-torchaudio
-soundfile
-numpy
+--extra-index-url https://download.pytorch.org/whl/cu121
+
+openai-whisper==20240930
+customtkinter==5.2.2
+pyaudio==0.2.14
+keyboard==0.13.5
+pyperclip==1.11.0
+torch==2.5.1+cu121
+torchaudio==2.5.1+cu121
+soundfile==0.13.1
+numpy==1.26.4
